<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="640dp"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35dp"
        android:paddingTop="23dp"
        android:fontFamily="@font/sakkal"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="Scan Your Plant" />

    <ImageView
        android:id="@+id/upload_to_scan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/uplaod"/>


    <androidx.cardview.widget.CardView
    android:layout_width="264dp"
    android:layout_height="260dp"
    android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp"
        android:layout_gravity="center">
        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Background Image -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <!-- Foreground Image -->
            <ImageView
                android:id="@+id/foreground_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/scan2" />

        </FrameLayout>
</androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_color"
        android:elevation="10dp">
    <Button
        android:id="@+id/IdentifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/no"
        android:text="Identify Plant"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_color"
        android:elevation="10dp">

    <Button
            android:id="@+id/HealthButton"
        android:background="@color/no"
        android:textColor="@color/white"
        android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Diagnose Health" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_color"
        android:elevation="10dp">
    <Button
        android:id="@+id/CropHealthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crop Health"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/no"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:textColor="#F1F1F1"
        android:text="identified plant info"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@drawable/nav_bar_background"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/in_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title"
                android:textSize="16sp"
                android:fontFamily="@font/sakkal"
                android:textColor="@color/app_green" />

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/app_circle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Diagnose_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintStart_toEndOf="@id/home_Btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/categories2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categories_title"
                android:textSize="16sp"
                android:fontFamily="@font/sakkal"
                android:textColor="@color/app_gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Scan_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintStart_toEndOf="@id/Diagnose_Btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="87dp"
                android:layout_height="87dp"
                android:src="@drawable/scan_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Feed_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintStart_toEndOf="@id/Scan_Btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/out_chat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_title"
                android:textSize="16sp"
                android:fontFamily="@font/sakkal"
                android:textColor="@color/app_gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/MYGarden_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintHeight_max="wrap"
            app:layout_constraintStart_toEndOf="@id/Feed_Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/my_garden_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mygarden_title"
                android:textSize="16sp"
                android:fontFamily="@font/sakkal"
                android:textColor="@color/app_gray" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

 </LinearLayout>
